--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.59.3"
+    "sass": "^1.59.3",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
